# django-url-security

./: .pre-commit-config.yaml  404.html  AUTHORS.md  CONTRIBUTING.md  LICENSE  README.md  index.html  mkdocs.yml  mypy.ini  pyproject.toml  runtests.py  tox.ini
.github/workflows/: code_quality_checks.yml  docs_publish.yml  pypi_publish.yml  test_pypi_publish.yml
django_url_security/: __init__.py  core.py  django.py  fastapi.py  fixtures.py  generate_permission_spec_file.py  test_url_security.py  url_security.py  url_security_spec.csv
django_url_security/management/commands/: export_url_security_file.py
docs/: index.md
example_fastapi_project/: main.py  tests.py
example_project/: manage.py  url_security_fixtures.py  url_security_spec.csv
example_project/example_site/: settings.py  tests.py  urls.py  views.py  wsgi.py
example_project/polls/: admin.py  views.py
example_project/polls/migrations/: 0001_initial.py
example_project/test_app/: tests.py  urls.py  views.py
search/: search_index.json
test_project/: manage.py  url_security_spec.csv
test_project/test_app/: tests.py  urls.py
test_project/test_project/: settings.py  urls.py
tests/: test_django_url_security.py
