[tool]

[tool.poetry]
name = "django_url_security"
version = "0.0.0"
homepage = "https://github.com/MattFisher/django-url-security"
description = "Django URL Security provides tests to ensure all the private endpoints in your Django project are private."
authors = ["Matt Fisher <m@ttfisher.com>"]
readme = "README.md"
license =  "MIT"
classifiers=[
    'License :: OSI Approved :: MIT License',
    'Natural Language :: English',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
]
include = [
    "LICENSE",
    "django_url_security/py.typed"
]

[tool.poetry.dependencies]
python = "^3.8"
importlib_metadata = "^3.4.0"
django = "^3.2"
parameterized = "^0.9.0"

[tool.poetry.group.dev.dependencies]
mkdocs-material = "^6.1.5"
pytest = "^7.0"
pytest-cov = "^4.1.0"
pylint = "^2.17.0"
black = "23.3.0"
mypy = "1.4.1"
pip = "^23.1.2"
setuptools = "^68.0.0"

[tool.black]
line-length=100

[tool.pylint.reports]
output-format="colorized"
reports="y"
include-ids="yes"
msg-template="{msg_id}:{line:3d},{column}: {obj}: {msg}"

[tool.pytest.ini_options]
addopts = "--cov=django_url_security --cov-branch --cov-report term-missing  -vv --color=yes --cov-fail-under 100"
python_files = "tests.py test_*.py *_tests.py"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
